--- a/res/layout/content_treatment.xml
+++ b/res/layout/content_treatment.xml
@@ -13,4 +13,104 @@
     tools:context="com.ece.ing4.ppe.smartpillbox.smartpillbox.TreatmentActivity"
     tools:showIn="@layout/app_bar_treatment">
 
+    <ScrollView android:id="@+id/ScrollViewID"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true">
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/spinnerTreatment"
+                android:prompt="@string/mail"
+                android:layout_columnSpan="3" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/spinnerMedicine"
+                android:prompt="@string/mail"
+                android:layout_columnSpan="3" />
+
+            <TextView
+                android:text="@string/current_medicine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/mytextName"
+                android:layout_weight="1"
+                android:layout_columnSpan="1" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="@string/ref_pharmacist"
+                android:ems="10"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/editPharmacist"
+                android:layout_weight="1"
+                android:layout_columnSpan="2"/>
+
+
+            <TextView
+                android:text="@string/contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textContact"
+                android:layout_weight="1"
+                android:layout_columnSpan="1" />
+
+            <EditText
+                android:id="@+id/opLevel"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"/>
+
+            <Button
+                android:id="@+id/buttonAddNewContact"
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="1"
+                android:text="@string/add" />
+
+            <include
+                android:id="@+id/medicineAddLayout"
+                layout="@layout/add_medicine_treatment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="3"
+                android:visibility="visible" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/spinnerContact"
+                android:prompt="@string/mail"
+                android:layout_columnSpan="3" />
+
+            <Button
+                android:text="@string/save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonSaveNewTreatment"
+                android:onClick="saveTreatment"
+                android:layout_columnSpan="3"/>
+        </GridLayout>
+    </ScrollView>
 </RelativeLayout>
